<resources>
    <string name="app_name">FinalTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">分数</string>
    <string name="reset">重置</string>
    <string name="hello_world">Hello World</string>
    <string name="send">发送</string>
    <string name="name">Name</string>
    <string name="a">A*</string>
    <string name="menu_game">Game</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_weather">Weather</string>
    <string name="clock_time">00:00:00</string>
    <string name="clock_start">START</string>
    <string name="clock_stop">STOP</string>
    <string name="clock_restart">RESTART</string>

    <string name="image_of_a_city">image of a city</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="wendu">温度:</string>
    <string name="shidu">湿度:</string>
    <string name="cityname"></string>
    <string name="search">搜索</string>
    <string name="title_music">Music</string>

    <string name="textview">TextView</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="pause">pause</string>
    <string name="prev">prev</string>
    <string name="stop">stop</string>
    <string name="turnbackground">切换背景</string>
</resources>